[package]
name = "count-combinations"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
dicgen = "^0.4.7"
rayon = "1.10.0"
serde = {  version = "1.0.219", features = ["derive"] }
serde_json = "1.0.104"
clap = { version = "4.5.35", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
